Update API and docs
