# openapi.yaml
@@ -1,6 +1,6 @@
 openapi: "3.0.2"
 info:
-  description: "A Node.js authentication API that uses JWT to provide very simple endpoints, and straightforward user authentication. \n\n This project has a basic behavior and it's intended to be the backbone of more complex user management."
+  description: "A Node.js/Express authentication API that uses JWT to provide very simple endpoints, and straightforward user authentication. \n\n This project has a basic behavior and it's intended to be the backbone of more complex user management."
   version: "1.0.0"
   title: "Auth API"
   license:
@@ -12,6 +12,8 @@ servers:
 tags:
 - name: "User"
   description: "Operations about user"
+- name: "Health"
+  description: "Operations about health"
 paths:
   /users:
     post:
@@ -58,8 +60,8 @@ paths:
         - auth: [] 
       tags:
       - "User"
-      summary: "Sign in user"
-      operationId: "signInUser"
+      summary: "Authenticate user"
+      operationId: "authenticateUser"
       requestBody:
         description: "User credentials"
         required: true
@@ -84,7 +86,7 @@ paths:
                       token:
                         type: "string"
                         example: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VySWQiOiI2MDUxM2U2YmJkOTdlZTA5YjVjZTNlODAiLCJpYXQiOjE2MTc0NjU1NjR9.lfDS9QwLys_MMHxM8QqYPGO2v2B9bGdJC6O_w_8VJhA"
-        422:
+        401:
           description: "Invalid credentials"
           content:
             application/json:
@@ -94,6 +96,16 @@ paths:
                   message:
                     type: "string"
                     example: "Email or password does not exist"
+        422:
+          description: "Invalid data"
+          content:
+            application/json:
+              schema: 
+                type: object
+                properties:
+                  message:
+                    type: "string"
+                    example: "\"email\" is required"
   /users/me:
     get:
       security:
@@ -125,6 +137,28 @@ paths:
                   message:
                     type: "string"
                     example: "Unauthorized"
+  /health:
+    get:
+      tags:
+      - "Health"
+      summary: "Show application health"
+      operationId: "health"
+      responses:
+        200:
+          description: "Success"
+          content:
+            application/json:
+              schema: 
+                type: object
+                properties:
+                  message:
+                    type: "string"
+                    example: "The application is running (Auth API)"
+                  mongodb: 
+                    type: object
+                    properties:
+                      connection: 
+                        example: "connected"
 components:
   schemas:
     userInput:
